origami-engine/tests/trybuild/fail/should_fail_when_minify_html_is_disabled_and_nominify_is_used.rs
use origami_engine::comp;

fn main() {
    comp! {
        foo =>
        script nominify {

        }
    }
    foo!();
}
