origami-engine/tests/trybuild/fail/should_fail_when_minify_html_is_disabled_and_nominify_is_used.stderr
error: It is not possible to use `"nominify"` without `minify_html` feature.
  --> tests/trybuild/fail/should_fail_when_minify_html_is_disabled_and_nominify_is_used.rs:6:16
   |
6  |         script nominify {
   |                ^^^^^^^^
...
10 |     foo!();
   |     ------ in this macro invocation
   |
   = note: this error originates in the macro `foo` (in Nightly builds, run with -Z macro-backtrace for more info)
